--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
 REACT_APP_TANENT_API_KEY=AIS8HJ24NDJ45
-REACT_APP_COGNITO_POOL_ID=us-east-1_nplhHH8V0
-REACT_APP_POOL_CLIENT_ID=gdtrg448l8jk0jt4knj7tgvap
-REACT_APP_OAUTH_DOMAIN=https://meadowland-playground.auth.us-east-1.amazoncognito.com
+REACT_APP_COGNITO_POOL_ID=us-east-1_1fIM0hLGS
+REACT_APP_POOL_CLIENT_ID=5ph35ncn18kvtchmplupn52a3j
+REACT_APP_OAUTH_DOMAIN=https://bt-geneai-chat.auth.us-east-1.amazoncognito.com
+REACT_APP_PROJECT_ID=00a1ee91-b2f1-41e6-94f5-0201fd127a01
