subscription test done

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 REACT_APP_TANENT_API_KEY=AIS8HJ24NDJ45
-REACT_APP_COGNITO_POOL_ID=us-east-1_1fIM0hLGS
-REACT_APP_POOL_CLIENT_ID=5ph35ncn18kvtchmplupn52a3j
-REACT_APP_OAUTH_DOMAIN=https://bt-geneai-chat.auth.us-east-1.amazoncognito.com
+REACT_APP_COGNITO_POOL_ID=us-east-1_eUPpG7Mea
+REACT_APP_POOL_CLIENT_ID=2gttg334j8pkg8o0mekqfnmkqe
+REACT_APP_OAUTH_DOMAIN=https://bt-ai-sovereignty-admin.auth.us-east-1.amazoncognito.com
 REACT_APP_PROJECT_ID=5e30b1c3-c8b8-49b3-83b1-9e3e022e482f
