--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -22,6 +23,9 @@
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "amazon-cognito-identity-js": "^6.3.12",
+    "aws-appsync": "^4.1.10",
+    "aws-appsync-auth-link": "^3.0.7",
+    "aws-appsync-subscription-link": "^3.1.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -30,6 +34,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.5.5",
+    "graphql-ws": "^5.16.0",
     "input-otp": "^1.2.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
@@ -41,6 +46,7 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
