project list api

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_COGNITO_POOL_ID=us-east-1_eUPpG7Mea
 REACT_APP_POOL_CLIENT_ID=2gttg334j8pkg8o0mekqfnmkqe
 REACT_APP_OAUTH_DOMAIN=https://bt-ai-sovereignty-admin.auth.us-east-1.amazoncognito.com
 REACT_APP_PROJECT_ID=5e30b1c3-c8b8-49b3-83b1-9e3e022e482f
+REACT_APP_ORGANIZATION_ID= 3f0d758e-84c9-4a3d-b15a-da7a0c2229ba
